# DataStructuresAndAlgorithms

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.md
01.AlgorithmicToolbox/: CMakeLists.txt
01.AlgorithmicToolbox/Week1ProgrammingChallenges/: CMakeLists.txt
01.AlgorithmicToolbox/Week1ProgrammingChallenges/include/: MaxPairwiseProduct.hpp
01.AlgorithmicToolbox/Week1ProgrammingChallenges/test/: CMakeLists.txt  MaxPairwiseProductStressTest.cpp
01.AlgorithmicToolbox/Week2AlgorithmicWarmup/: CMakeLists.txt
01.AlgorithmicToolbox/Week2AlgorithmicWarmup/include/: Mathematics.hpp
01.AlgorithmicToolbox/Week2AlgorithmicWarmup/test/: CMakeLists.txt  GCD_LCM_StressTest.cpp
01.AlgorithmicToolbox/Week3GreedyAlgorithms/include/: CoveringSegmentsByPoints.hpp  FractionalKnapsack.hpp  LargestNumber.hpp  MaxDotProduct.hpp  MoneyChange.hpp
01.AlgorithmicToolbox/Week3GreedyAlgorithms/test/: CMakeLists.txt  DifferentSummandsUnitTest.cpp  LargestNumberStressTest.cpp  MaxDotProductStressTest.cpp  MoneyChangeStressTest.cpp
01.AlgorithmicToolbox/Week4DivideAndConquer/include/: MajorityElement.hpp  PointsAndSegments.hpp  ThreeWayPartition.hpp
01.AlgorithmicToolbox/Week4DivideAndConquer/test/: BinarySearchStressTest.cpp  CMakeLists.txt  ClosestPointsStressTest.cpp  ClosestPointsUnitTest.cpp  InversionsStressTest.cpp  InversionsUnitTest.cpp  MajorityElementStressTest.cpp  PointsAndSegmentsStressTest.cpp  ThreeWayPartitionStressTest.cpp  ThreeWayPartitionUnitTest.cpp
01.AlgorithmicToolbox/Week5DynamicProgramming1/include/: EditDistance.hpp  LongestCommonSubsequence.hpp  PrimitiveCalculator.hpp
01.AlgorithmicToolbox/Week5DynamicProgramming1/test/: CMakeLists.txt  EditDistanceStressTest.cpp  LCSThreeStressTest.cpp  LCSThreeUnitTest.cpp  LCSTwoStressTest.cpp  MoneyChange2StressTest.cpp  PrimitiveCalculatorStressTest.cpp
01.AlgorithmicToolbox/Week6DynamicProgramming2/include/: PartitionThree.hpp  PlacingParenthesis.hpp
01.AlgorithmicToolbox/Week6DynamicProgramming2/test/: CMakeLists.txt  KnapsackStressTest.cpp  PartitionThreeStressTest.cpp  PlacingParenthesisUnitTest.cpp
01_02.MaxPairWiseProduct/: CMakeLists.txt  main.cpp
01_02.MaxPairWiseProduct/include/: MaxPairwiseProduct.hpp
01_02.MaxPairWiseProduct/test/: CMakeLists.txt
02.DataStructures/: CMakeLists.txt
02.DataStructures/Week1BasicDataStructures/include/: #CheckBrackets.hpp#  CheckBrackets.hpp~  NetworkPacketProcessingSimulation.hpp  TreeHeight.hpp
02.DataStructures/Week1BasicDataStructures/test/: CMakeLists.txt  CMakeLists.txt~  CheckBracketsUnitTest.cpp  TreeHeightUnitTest.cpp
02.DataStructures/Week2PriorityQueuesAndDisjointSets/test/: BuildMinHeapUnitTest.cpp  CMakeLists.txt  ParallelProcessingUnitTest.cpp
02.DataStructures/Week4HashTablesAndHashFunctions/include/: FindPatternInText.hpp  PhoneBook.hpp
02.DataStructures/Week4HashTablesAndHashFunctions/test/: CMakeLists.txt  FindPatternInTextUnitTest.cpp  HashingWithChainsUnitTest.cpp  PhoneBookUnitTest.cpp
02.DataStructures/Week6BinarySearchTrees/include/: BinaryTreeTraversals.hpp  CheckValidBinaryTreeHard.hpp
02.DataStructures/Week6BinarySearchTrees/test/: BinaryTreeTraversalsUnitTest.cpp  CMakeLists.txt  CheckValidBinaryTreeUnitTest.cpp
C++/: .gitignore  CMakeLists.txt  README.md
C++/01.AlgorithmicToolbox/Week1ProgrammingChallenges/: CMakeLists.txt  MaxPairwiseProduct.hpp  MaxPairwiseProductStressTest.cpp  MaxPairwiseProductUnitTest.cpp
C++/01.AlgorithmicToolbox/Week2AlgorithmicWarmup/: CMakeLists.txt  FibonacciStressTest.cpp  Math.hpp  MathUnitTest.cpp  MathematicsUnitTest.cpp
C++/01.AlgorithmicToolbox/Week3GreedyAlgorithms/: CMakeLists.txt  CoveringSegmentsByPoints.hpp  CoveringSegmentsUnitTest.cpp  DifferentSummands.hpp  FractionalKnapsackUnitTest.cpp  LargestNumber.hpp  LargestNumberStressTest.cpp  LargestNumberUnitTest.cpp
C++/01.AlgorithmicToolbox/Week4DivideAndConquer/: BinarySearch.hpp  BinarySearchStressTest.cpp  BinarySearchUnitTest.cpp  CMakeLists.txt  ClosestPoints.hpp  ClosestPointsStressTest.cpp  Inversions.hpp  InversionsStressTest.cpp  MajorityElementUnitTest.cpp  PointsAndSegments.hpp  PointsAndSegmentsUnitTest.cpp  ThreeWayPartitionStressTest.cpp  ThreeWayPartitionUnitTest.cpp
C++/01.AlgorithmicToolbox/Week5DynamicProgramming1/: CMakeLists.txt  EditDistanceUnitTest.cpp  LCSThreeStressTest.cpp  LCSTwoStressTest.cpp  LCSTwoUnitTest.cpp  MoneyChange2.hpp  MoneyChange2UnitTest.cpp  PrimitiveCalculatorStressTest.cpp  PrimitiveCalculatorUnitTest.cpp
C++/01.AlgorithmicToolbox/Week6DynamicProgramming2/: CMakeLists.txt  Knapsack.hpp  KnapsackUnitTest.cpp  PartitionThreeStressTest.cpp  PartitionThreeUnitTest.cpp  PlacingParenthesisUnitTest.cpp
C++/02.DataStructures/: CMakeLists.txt
C++/02.DataStructures/Week1BasicDataStructures/: CMakeLists.txt  CheckBrackets.hpp  NetworkPacketProcessingSimulationUnitTest.cpp  StackWithMax.hpp  StackWithMaxUnitTest.cpp
C++/02.DataStructures/Week2PriorityQueuesAndDisjointSets/: BuildMinHeap.hpp  CMakeLists.txt  MergingTables.hpp  MergingTablesUnitTest.cpp  ParallelProcessing.hpp
C++/02.DataStructures/Week4HashTablesAndHashFunctions/: CMakeLists.txt  HashingWithChains.hpp
C++/02.DataStructures/Week6BinarySearchTrees/: BinaryTreeTraversals.hpp  CMakeLists.txt  CheckValidBinaryTree.hpp  CheckValidBinaryTreeHardUnitTest.cpp  CheckValidBinaryTreeUnitTest.cpp
C++/include/: UniformRandom.hpp
Elixir/: .gitignore  README.md  mix.exs
Elixir/lib/: data_structures_and_algorithms.ex
Gleam/: README.md  gleam.toml
Gleam/src/: gleam.app.src
Haskell/: ChangeLog.md  DataStructuresAndAlgorithms.cabal  LICENSE  README.md  package.yaml
Javascript/: .eslintrc.js  .gitignore  .prettierignore  README.md  jest.config.mjs  package-lock.json  package.json
Rust/: Cargo.toml  README.md
Rust/src/: lib.rs
Rust/src/_01_algorithmic_toolbox/: mod.rs
Typescript/: #tslint.config#  .eslintrc.js  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json  tslint.json
elixir/: mix.exs
elixir/test/: data_structures_and_algorithms_test.exs
include/: SteadyClockTimer.hpp
(+88 files in other folders)
