add_executable(MoneyChange2UnitTest MoneyChange2UnitTest.cpp)
add_executable(MoneyChange2StressTest MoneyChange2StressTest.cpp)
add_executable(PrimitiveCalculatorUnitTest PrimitiveCalculatorUnitTest.cpp)
add_executable(PrimitiveCalculatorStressTest PrimitiveCalculatorStressTest.cpp)
add_executable(EditDistanceUnitTest EditDistanceUnitTest.cpp)
add_executable(EditDistanceStressTest EditDistanceStressTest.cpp)
add_executable(LCSTwoUnitTest LCSTwoUnitTest.cpp)
add_executable(LCSTwoStressTest LCSTwoStressTest.cpp)
add_executable(LCSThreeUnitTest LCSThreeUnitTest.cpp)
add_executable(LCSThreeStressTest LCSThreeStressTest.cpp)

target_link_libraries(MoneyChange2UnitTest gmock pthread)
target_link_libraries(PrimitiveCalculatorUnitTest gmock pthread)
target_link_libraries(EditDistanceUnitTest gmock pthread)
target_link_libraries(LCSTwoUnitTest gmock pthread)
target_link_libraries(LCSThreeUnitTest gmock pthread)
