add_executable(BinarySearchUnitTest BinarySearchUnitTest.cpp)
add_executable(BinarySearchStressTest BinarySearchStressTest.cpp)
add_executable(MajorityElementUnitTest MajorityElementUnitTest.cpp)
add_executable(MajorityElementStressTest MajorityElementStressTest.cpp)
add_executable(ThreeWayPartitionUnitTest ThreeWayPartitionUnitTest.cpp)
add_executable(ThreeWayPartitionStressTest ThreeWayPartitionStressTest.cpp)
add_executable(InversionsUnitTest InversionsUnitTest.cpp)
add_executable(InversionsStressTest InversionsStressTest.cpp)
add_executable(PointsAndSegmentsUnitTest PointsAndSegmentsUnitTest.cpp)
add_executable(PointsAndSegmentsStressTest PointsAndSegmentsStressTest.cpp)
add_executable(ClosestPointsUnitTest ClosestPointsUnitTest.cpp)
add_executable(ClosestPointsStressTest ClosestPointsStressTest.cpp)

target_link_libraries(BinarySearchUnitTest gmock pthread)
target_link_libraries(MajorityElementUnitTest gmock pthread)
target_link_libraries(ThreeWayPartitionUnitTest gmock pthread)
target_link_libraries(InversionsUnitTest gmock pthread)
target_link_libraries(PointsAndSegmentsUnitTest gmock pthread)
target_link_libraries(ClosestPointsUnitTest gmock pthread)

add_test(BinarySearchUnitTest BinarySearchUnitTest)
add_test(MajorityElementUnitTest MajorityElementUnitTest)
add_test(ThreeWayPartitionUnitTest ThreeWayPartitionUnitTest)
add_test(InversionsUnitTest InversionsUnitTest)
add_test(PointsAndSegmentsUnitTest PointsAndSegmentsUnitTest)
add_test(ClosestPointsUnitTest ClosestPointsUnitTest)
