add_executable(PhoneBookUnitTest PhoneBookUnitTest.cpp)
target_link_libraries(PhoneBookUnitTest gmock pthread)
add_test(PhoneBookUnitTest PhoneBookUnitTest)

add_executable(HashingWithChainsUnitTest HashingWithChainsUnitTest.cpp)
target_link_libraries(HashingWithChainsUnitTest gmock pthread)
add_test(HashingWithChainsUnitTest HashingWithChainsUnitTest)

add_executable(FindPatternInTextUnitTest FindPatternInTextUnitTest.cpp)
target_link_libraries(FindPatternInTextUnitTest gmock pthread)
add_test(FindPatternInTextUnitTest FindPatternInTextUnitTest)
